--- a/pag2.html
+++ b/pag2.html
@@ -8,7 +8,8 @@
     body {
       background-image: url(maze/twoways.png);
       background-color: black;
-      height: 500px;
+      max-width: 100%;
+      height: auto;
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-size: auto;
