--- a/SalaTesoro.html
+++ b/SalaTesoro.html
@@ -8,10 +8,9 @@
     body {
       background-image: url(maze/TreasureRoom.png);
       background-color: black;
-      height: 500px;
-      background-position: 50% 50%;
+      background-position: auto;
       background-repeat: no-repeat;
-      background-size: auto;
+      background-size: 1600px 900px;
       position: relative;
     }
 
@@ -19,15 +18,15 @@
       color: white;
       text-align: center;
       position: absolute;
-      left: 875px;
-      bottom: -300px;
+      left: 740px;
+      top: 820px;
       border:double;
     }
     button.open{
       text-align: center;
       position: absolute;
-      left: 905px;
-      bottom: -160px;
+      left: 770px;
+      top: 700px;
     }
   </style>
 </head>
