--- a/creditos.html
+++ b/creditos.html
@@ -6,11 +6,11 @@
   <title>Creditos</title>
   <style>
     body {
-      background-color: black;
       background-image: url(maze/galaxy.jpg);
-      height: 875px;
-      background-position: center;
+      background-color: black;
+      background-position: auto;
       background-repeat: no-repeat;
+      background-size: 1600px 900px;
       position: relative;
     }
 
@@ -18,8 +18,8 @@
       border: 5px double whitesmoke;
       text-align: center;
       position: absolute;
-      left: 400px;
-      bottom: 400px;
+      left: 450px;
+      top: 400px;
     }
 
     h1.b {
