--- a/pag16-3.html
+++ b/pag16-3.html
@@ -8,10 +8,9 @@
     body {
       background-image: url(maze/treasure.png);
       background-color: black;
-      height: 500px;
-      background-position: 50% 50%;
+      background-position: auto;
       background-repeat: no-repeat;
-      background-size: auto;
+      background-size: 1600px 900px;
       position: relative;
     }
 
@@ -19,21 +18,21 @@
       color: white;
       text-align: center;
       position: absolute;
-      left: 850px;
-      bottom: -300px;
+      left: 700px;
+      top: 750px;
       border:double;
     }
     button.left{
       text-align: center;
       position: absolute;
-      left: 575px;
-      bottom: -160px;
+      left: 490px;
+      top: 700px;
     }
     button.right {
       text-align: center;
       position: absolute;
-      right: 595px;
-      bottom: -160px;
+      right: 510px;
+      top: 705px;
     }
   </style>
 </head>
