--- a/BossFightX.html
+++ b/BossFightX.html
@@ -5,12 +5,11 @@
     <title>Boss Fight</title>
     <style>
         body {
-            background-color: black;
             background-image: url(maze/BossRoomDullahan.png);
-            height: 500px;
-            background-position: 50% 50%;
+            background-color: black;
+            background-position: auto;
             background-repeat: no-repeat;
-            background-size: auto;
+            background-size: 1600px 900px;
             position: relative;
 
         }
@@ -18,8 +17,8 @@
         .main_div {
             text-align: center;
             position: absolute;
-            left: 825px;
-            bottom: -350px;
+            left: 700px;
+            top: 800px;
 
         }
 
@@ -36,6 +35,7 @@
 
     </div>
     <!--El script tiene las funciones necesarias para que al pulsar un boton baje la vida del enemigo automaticamente.-->
+    <!--Ademas de volverla a escribir cuando se termina la batalla.-->
     <script>
         var enemyName = "Dullahan";
         var enemyHp = 100;
@@ -66,7 +66,7 @@
                 document.write("a{ color: white;")
                 document.write("text-align:center;")
                 document.write("position: absolute;")
-                document.write("left: 850px;")
+                document.write("left: 700px;")
                 document.write("bottom: 200px;")
                 document.write("</style></head>");
                 document.write("<body>");
