--- a/index.html
+++ b/index.html
@@ -6,50 +6,43 @@
     <title>Historia</title>
     <style>
         body {
-            background-color: black;
             background-image: url(maze/Event.png);
-            height: 950px;
-            background-position: 50% 50%;
+            background-color: black;
+            background-position: auto;
             background-repeat: no-repeat;
-            background-size: auto;
+            background-size: 1600px 900px;
             position: relative;
         }
-        h1.a{
-            text-align: center;      
-            position: relative;
-            right: 0px;
-            bottom: -350px;
+
+        div {
+            text-align: center;
+            position: absolute;
+            left: 200px;
+            top: 350px;
         }
-        h1.b{
-            text-align: center;      
-            position: relative;
-            right: 0px;
-            bottom: -375px;
-        }
-        h1.c{
-            text-align: center;      
-            position: relative;
-            right: 0px;
-            bottom: -400px;
-        }
-        button.entrar{
-            text-align: center;      
+
+        button.entrar {
+            text-align: center;
             position: relative;
             left: 725px;
-            bottom: -450px;
+            top: 700px;
         }
     </style>
 </head>
 
 <body>
     <main>
-        <h1 class="a">Eres un aventurero el cual ha escuchado a un bardo cantar sobre <br> un laberinto el cual tiene un gran tesoro.</h1>
-        <h1 class="b">Te preparas para la búsqueda y pelea, ya que según <br> la canción del bardo hay a un monstruo protegiendo el tesoro.</h1>
-        <h1 class="c">Tras semanas de búsqueda, <br> encuentras el laberinto en una cueva de una montaña.</h1>
+        <div>
+            <h1>Eres un aventurero el cual ha escuchado a un bardo cantar sobre un laberinto el cual <br> tiene un gran
+                tesoro.</h1>
+            <h1>Te preparas para la búsqueda y pelea, ya que según la canción del bardo <br> hay a un monstruo protegiendo el
+                tesoro.</h1>
+            <h1>Tras semanas de búsqueda, encuentras el laberinto en una cueva de una montaña.</h1>
+        </div>
         <button type="button" class="entrar" onclick="end()">Entrar</button>
         <!--El script es utilizado para que el boton funcione.-->
         <script>
-            function end(){
+            function end() {
                 window.location.assign("pag1.html")
             }
         </script>
