--- a/pag10-2.html
+++ b/pag10-2.html
@@ -8,10 +8,9 @@
     body {
       background-image: url(maze/twoways.png);
       background-color: black;
-      height: 500px;
-      background-position: 50% 50%;
+      background-position: auto;
       background-repeat: no-repeat;
-      background-size: auto;
+      background-size: 1600px 900px;
       position: relative;
     }
 
@@ -19,8 +18,8 @@
       color: white;
       text-align: center;
       position: absolute;
-      left: 800px;
-      bottom: -100px;
+      left: 700px;
+      top: 700px;
     }
   </style>
 </head>
