--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-image: url(maze/Event.png);
             background-color: black;
-            background-position: center, center;
+            background-position: auto;
             background-repeat: no-repeat;
             background-size: 1600px 900px;
             position: relative;
