--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         div {
             text-align: center;
             position: absolute;
-            left: 200px;
-            top: 350px;
+            left: 150px;
+            top: 250px;
         }
 
         button.entrar {
@@ -33,11 +33,12 @@
 <body>
     <main>
         <div>
-            <h1>Eres un aventurero el cual ha escuchado a un bardo cantar sobre un laberinto el cual <br> tiene un gran
+            <h1>Eres un aventurero el cual ha escuchado a un bardo cantar sobre <br> un laberinto el cual tiene un gran
                 tesoro.</h1>
             <h1>Te preparas para la búsqueda y pelea, ya que según la canción del bardo <br> hay a un monstruo protegiendo el
                 tesoro.</h1>
-            <h1>Tras semanas de búsqueda, encuentras el laberinto en una cueva de una montaña.</h1>
+            <h1>Tras semanas de búsqueda, encuentras el laberinto en una <br> cueva de una montaña.</h1>
+            <h2>Juega en pantalla completa por favor.</h2>
         </div>
         <button type="button" class="entrar" onclick="end()">Entrar</button>
         <!--El script es utilizado para que el boton funcione.-->
