--- a/Recompensa.html
+++ b/Recompensa.html
@@ -8,7 +8,7 @@
         body {
             background-image: url(maze/Event.png);
             background-color: black;
-            background-position: auto;
+            background-position:top center;
             background-repeat: no-repeat;
             background-size: 1600px 900px;
             position: relative;
@@ -18,7 +18,7 @@
             text-align: center;
             position: relative;
             right: 0px;
-            bottom: -500px;
+            top: 500px;
         }
 
         button.end {
