--- a/pag6-2.html
+++ b/pag6-2.html
@@ -8,7 +8,7 @@
     body {
       background-image: url(maze/straight.png);
       background-color: black;
-      background-position: auto;
+      background-position:top center;
       background-repeat: no-repeat;
       background-size: 1600px 900px;
       position: relative;
